# NLP-cookbook

./: .netrc  README.md  data_preprocessing.py  evaluate.py  inference.py  model_utils.py  pyproject.toml  split_data.py  train.py
.triton/cache/0422c5d4f1b8648a7770150f8b56ce26d7a47dedf0d9d474804d24b9606512ef/: __grp___gemma_rms_layernorm_forward.json  _gemma_rms_layernorm_forward.cubin  _gemma_rms_layernorm_forward.json  _gemma_rms_layernorm_forward.llir  _gemma_rms_layernorm_forward.ptx  _gemma_rms_layernorm_forward.ttgir  _gemma_rms_layernorm_forward.ttir
.triton/cache/18c3eb1c07ef8de8221d857384b59488afcb3d8d2332ae70aa0929f059e31c66/: __grp___rope_embedding.json  _rope_embedding.cubin  _rope_embedding.json  _rope_embedding.llir  _rope_embedding.ptx  _rope_embedding.ttgir  _rope_embedding.ttir
.triton/cache/19bef0e7814de3fe4990fe30b75a185faf943964c0b4f935a61ae5b4e1bd22a2/: __grp___rope_embedding.json  _rope_embedding.cubin  _rope_embedding.json  _rope_embedding.llir  _rope_embedding.ptx  _rope_embedding.ttgir  _rope_embedding.ttir
.triton/cache/6fdc8875a6112a168452411f8c1d82c094b75a3f707f3f984fa34b1e27d0caaa/: __grp___rope_embedding.json  _rope_embedding.cubin  _rope_embedding.json  _rope_embedding.llir  _rope_embedding.ptx  _rope_embedding.ttgir  _rope_embedding.ttir
.triton/cache/a984886f2e236ec2bfeda38df591a868b6c21feffe582e849d7c06c278a3f198/: __grp___gemma_rms_layernorm_forward.json  (+6 more)
data/: modified_recipes2_with_calories_cleaned.csv  test_products.csv  train_products.csv
wandb/: latest-run
wandb/run-20250128_175444-oflgmrar/: run-oflgmrar.wandb
(+11 files in other folders)
