[project]
name = "cookbook"
version = "0.1.0"
description = ""
authors = [
    {name = "nikodemkunach",email = "s25030@pjwstk.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "trl (>=0.13.0,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "datasets (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
